# mpvradio

./: .gitignore  Makefile.am  Makefile.in  README  config.h  configure.ac  configure~
data/: 00_radiko.m3u  AFNgo_tile.png.1  Makefile.am  afn.py  afn.sh  logo.png.1  logo_2022_nav_244x64.svg.1  logodownload.sh  mpvradio.desktop  mpvradio.desktop.in  mpvradio.lua  radiko.py  radio.m3u
data/~/.cache/mpvradio/afn/: AFN_JO  AFN_JOEP
po/: POTFILES  POTFILES.in
src/: Makefile.am  extm3u_test.c  gtkgesture_demo.c  mpvradio  mpvradio-adduri.c  mpvradio-banner.c  mpvradio-banner.h  mpvradio-common.c  mpvradio-common.h  mpvradio-config.c  mpvradio-ipc.c  mpvradio-ipc.h  mpvradio-main.c  mpvradio-notify.c  mpvradio-playlist.c  mpvradio-playlist.h  mpvradio-radiopanel.c  mpvradio-radiopanel.c.bak  mpvradio-radiopanel.h  mpvradio-stationbutton.c  mpvradio-stationbutton.h  mpvradio-statusicon.c  mpvradio-statusicon.h  mpvradio.h
